add: funcionalidade de filtros
